syntax = "proto3";

package chat;
option go_package = "./api/chatpb";

message Room {
  string id = 1;
  string name = 2;
  bool is_group = 3;
  string created_at = 4;
}

message Message {
  string id = 1;
  string room_id = 2;
  string sender_id = 3;
  string content = 4;
  bool has_attachment = 5;
  string created_at = 6;
}

message CreateRoomRequest {
  string name = 1;
  repeated string members = 2;
  bool is_group = 3;
}

message CreateRoomResponse {
  Room room = 1;
}

message SendMessageRequest {
  string room_id = 1;
  string sender_id = 2;
  string content = 3;
  bool has_attachment = 4;
}

message SendMessageResponse {
  Message message = 1;
}

message GetMessagesRequest {
  string room_id = 1;
  int32 limit = 2;
}

message GetMessagesResponse {
  repeated Message messages = 1;
}

message AddMemberRequest {
  string room_id = 1;
  string user_id = 2;
}

message AddMemberResponse {
  string message = 1;
}

// Service RPC
service ChatService {
  rpc CreateRoom(CreateRoomRequest) returns (CreateRoomResponse);
  rpc SendMessage(SendMessageRequest) returns (SendMessageResponse);
  rpc GetMessages(GetMessagesRequest) returns (GetMessagesResponse);
  rpc AddMember(AddMemberRequest) returns (AddMemberResponse);
}
